# Craigslist-WebScraper

./: pyproject.toml
data/: boulder_results_18-09-2022.parquet  cosprings_results_18-09-2022.parquet  denver_results_18-09-2022.parquet  eastco_results_18-09-2022.parquet  fortcollins_results_18-09-2022.parquet  pueblo_results_18-09-2022.parquet  rockies_results_18-09-2022.parquet  westslope_results_18-09-2022.parquet
webscraper/: WebScraps.py  analysis.py
