[tool.poetry]
name = "WebScraper"
version = "0.1.0"
description = ""
authors = ["Marikit Yake <lilycl@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.28.1"
pandas = "^1.4.4"
pyarrow = "^9.0.0"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
